ship/src/main/java/com/zyc/magic_mirror/ship/antlr4/SR.g4
grammar SR;

prog : stat;
stat: expr # assign
    ;
expr:  expr OPERATOR expr   #OPERATOR
| '('expr')'                  #PARENGRP
| STR                            #STR
;

OPERATOR: ('&&'|'||'|'!');

STR : [a-zA-Z]+ ;
WS : [ \r\n\t]+ -> skip;
